# AI-Insect-Zapper

./: .gitignore  README.md  pyproject.toml
model-training/: README.md  conversion.py  data.yaml  training.py
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml  results.csv
src/AI_Insect_Zapper/: opencv-python.py
src/AI_Insect_Zapper/model-training/: training.py
src/AI_Insect_Zapper/model-usage/: opencv-python.py
src/AI_Insect_Zapper/model_training/: training.py
src/AI_Insect_Zapper/model_usage/: gpio_utils.py  opencv-python.py
src/ai_insect_zapper/: spi_utils.py
src/models/: README.md
tests/: spi_test.py
