[project]
name = "ai-insect-zapper"
version = "0.1.0"
description = "Insect Zapper w/ Image/object Detection"
authors = [
    {name = "NahtannL",email = "thenathan168@gmail.com"},
    {name = "SituMatthew",email = "matsitu2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"