[project]
name = "ai-insect-zapper"
version = "0.1.0"
description = "Insect Zapper w/ Object Detection using YOLO11"
authors = [
    {name = "NahtannL",email = "thenathan168@gmail.com"},
    {name = "SituMatthew",email = "matsitu2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "ultralytics (>=8.3.167,<9.0.0)",
]

[tool.poetry]
packages = [{include = "ai_insect_zapper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"